syntax = "proto3";
package pdytr.example.grpc;

// Request payload
message ReadRequest {
  string name = 1;
  int32 pos = 2;
  int32 count = 3;
}

message ReadResponse {
  int32 count = 1;
  bytes data = 2;
}

// Request payload
message WriteRequest {
  string name = 1;
  int32 count = 3;
  bytes data = 2;
}

message WriteResponse {
  int32 count = 1;
}

// Defining a Service, a Service can have multiple RPC operations
service FileService {
  // Define a RPC operation
   rpc read(ReadRequest) returns (ReadResponse);
   rpc write(WriteRequest) returns (WriteResponse);
}

